# amdis2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  converter.py
cmake/: AMDISConfig.cmake.in  AMDISUse.cmake  HYPREConfig.cmake  amdis_compositeFEM.cmake  amdis_extensions.cmake  amdis_parallel.cmake  amdis_reinit.cmake  find_boost.cmake  find_mtl4.cmake  find_petsc.cmake  find_umfpack.cmake  muparser.cmake  myMake.sh.in  postrm.in  test_compile_features.cmake
cmake_old/: AMDISConfig.cmake.in  CMakeLists.txt  CTestConfig.cmake  CTestScript.cmake.in  FindPETSc.cmake  (+1 more)
demo/: CMakeLists.txt
demo/init/: ball.dat.2d  ball.dat.3d  bunny.dat.3d  ellipt.dat.1d  ellipt.dat.2d  ellipt.dat.3d  ellipt.json.2d  heat.dat.1d  heat.dat.2d  heat.dat.3d  neumann.dat.2d  nonlin.dat.2d  parametric.dat.3d  periodic.dat.2d  periodic.dat.3d  periodic.per.1d  periodic.per.2d  periodic.per.3d  sphere.dat.3d  torus.dat.3d  vecellipt.dat.1d  vecellipt.dat.2d  vecellipt.dat.3d  vecheat.dat.1d  vecheat.dat.2d  vecheat.dat.3d
demo/init/tmp/: cahnHilliard.inc.2d  drivenCavity.dat.2d  linearElasticity.inc.2d  linearElasticityDd.dat.2d  navierStokes.dat.2d  navierStokesDd.dat.2d  navierStokes_Chorin.inc.2d  navierStokes_TaylorHood.inc.2d  navierStokes_rb.dat.2d  pfc.dat.2d  reinit.inc.2d
demo/macro/: kanal_square.2d  kanal_square_fin.2d  macro.25.4.2d  macro.ball.2d  macro.ball.3d  macro.drivenCavity.2d  macro.square.2d  macro.stand.1d  macro.stand.2d  neumann.macro.2d  parametric.macro.3d  periodic.macro.1d  periodic.macro.2d  periodic.macro.3d  periodic.square.2d  periodic.square.per  sphere_macro.3d  torus_macro.3d
demo/src/: ball.cc  bunny.cc  ellipt.cc  heat.cc  neumann.cc  nonlin.cc  parametric.cc  parametric2.cc  periodic.cc  sphere.cc  test1.cc  test2.cc  torus.cc  vecellipt.cc  vecheat.cc
lib/mtl4/: CMakeLists.txt  Doxyfile  README  SConstruct
lib/mtl4/boost/numeric/itl/krylov/: bicgstab_2.hpp  bicgstab_ell.hpp  gmres.hpp  idr_s.hpp
lib/mtl4/boost/numeric/itl/pc/: diagonal.hpp  ic_0.hpp  ilu.hpp  ilu_0.hpp  ilut.hpp  imf_algorithms.hpp  imf_preconditioner.hpp  matrix_algorithms.hpp  solver.hpp  sub_matrix_pc.hpp
lib/mtl4/boost/numeric/itl/smoother/: gauss_seidel.hpp  jacobi.hpp  jor.hpp  sor.hpp
lib/mtl4/boost/numeric/linear_algebra/: identity.hpp
lib/mtl4/boost/numeric/mtl/: config.hpp  matrices.hpp  mtl_fwd.hpp  vectors.hpp  version.hpp.in
lib/mtl4/boost/numeric/mtl/concept/: collection.hpp  matrix.hpp
lib/mtl4/boost/numeric/mtl/detail/: contiguous_memory_block.hpp  range_generator.hpp  trivial_inserter.hpp
lib/mtl4/boost/numeric/mtl/interface/: umfpack_solve.hpp  vpt.cpp
lib/mtl4/boost/numeric/mtl/io/: matrix_market.hpp  read_el_matrix.hpp  write_ast_dispatch.hpp
lib/mtl4/boost/numeric/mtl/matrix/: banded_view.hpp  bands.hpp  base_matrix.hpp  base_sub_matrix.hpp  block_diagonal2D.hpp  compressed2D.hpp  coordinate2D.hpp  crtp_base_matrix.hpp  dense2D.hpp  diagonal_setup.hpp  element.hpp  element_array.hpp  element_matrix.hpp  element_structure.hpp  ell_matrix.hpp  hermitian_view.hpp  hessian_setup.hpp  identity.hpp  identity2D.hpp  implicit_dense.hpp  indirect.hpp  inserter.hpp  laplacian_setup.hpp  lower.hpp  make_fast_multi_vector_expr.hpp  map_view.hpp  mapped_inserter.hpp  mat_expr.hpp  mat_mat_asgn_expr.hpp  mat_mat_ele_times_expr.hpp  mat_mat_minus_expr.hpp  mat_mat_op_expr.hpp  mat_mat_plus_expr.hpp  mat_mat_times_expr.hpp  mat_negate_expr.hpp  morton_dense.hpp  multi_vector.hpp  multi_vector_range.hpp  operators.hpp  parameter.hpp  (+12 more)
lib/mtl4/boost/numeric/mtl/operation/: adjoint.hpp  assign_each_nonzero.hpp  assign_mode.hpp  cholesky.hpp  column_in_matrix.hpp  compute_factors.hpp  compute_summand.hpp  conj.hpp  copy.hpp  crop.hpp  cross.hpp  cuppen.hpp  diagonal.hpp  div_result.hpp  divide_by.hpp  dmat_dmat_mult.hpp  dot.hpp  eigenvalue.hpp  eigenvalue_symmetric.hpp  element_structure_algorithms.hpp  entry1D.hpp  entry_similar.hpp  evaluate_lazy.hpp  frobenius_norm.hpp  fused_expr.hpp  fused_index_evaluator.hpp  givens.hpp  hermitian.hpp  hessenberg.hpp  householder.hpp  imag.hpp  index_evaluator.hpp  infinity_norm.hpp  inv.hpp  invert_diagonal.hpp  iota.hpp  left_scale_inplace.hpp  look_at_each_nonzero.hpp  lower_trisolve.hpp  lu.hpp  (+56 more)
lib/mtl4/boost/numeric/mtl/recursion/: base_case_matrix.hpp  for_each.hpp  matrix_recursator.hpp
lib/mtl4/boost/numeric/mtl/utility/: ashape.hpp  category.hpp  compose_view.hpp  copy_expression_const_ref_container.hpp  dense_el_cursor.hpp  domain.hpp  eval.hpp  eval_dense.hpp  fast_multi_vector_expr.hpp  gradient.hpp  index_evaluatable.hpp  index_evaluator.hpp  is_composable_vector.hpp  is_lazy.hpp  is_multi_vector_expr.hpp  is_row_major.hpp  is_static.hpp  is_vector_reduction.hpp  iset.hpp  linear_operator.hpp  lu_matrix_type.hpp  parameters.hpp  property_map.hpp  property_map_impl.hpp  range_generator.hpp  range_wrapper.hpp  root.hpp  strided_dense_el_cursor.hpp  strided_dense_el_iterator.hpp  tag.hpp  transposed_matrix_type.hpp  unroll_size1.hpp  view_code.hpp  viewed_collection.hpp  with_unroll1.hpp
lib/mtl4/boost/numeric/mtl/vector/: assign_expression.hpp  assigner.hpp  crtp_base_vector.hpp  decrementer.hpp  dense_vector.hpp  dimension.hpp  dot_index_evaluator.hpp  extracter.hpp  incrementer.hpp  inserter.hpp  lazy_reduction.hpp  map_view.hpp  mapped_inserter.hpp  mat_cvec_multiplier.hpp  parameter.hpp  reduction.hpp  reduction_functors.hpp  reduction_index_evaluator.hpp  row_mat_cvec_index_evaluator.hpp  rvec_mat_times_expr.hpp  sparse_vector.hpp  strided_vector_ref.hpp  unit_vector.hpp  unrolled1.hpp  vec_const_ref_expr.hpp  vec_expr.hpp  vec_negate_expr.hpp  vec_scal_aop_expr.hpp  vec_scal_asgn_expr.hpp  vec_scal_minus_asgn_expr.hpp  vec_scal_mixed_expr.hpp  vec_scal_plus_asgn_expr.hpp  vec_scal_times_asgn_expr.hpp  vec_vec_aop_expr.hpp  vec_vec_asgn_expr.hpp  vec_vec_div_asgn_expr.hpp  vec_vec_ele_prod_expr.hpp  vec_vec_ele_quot_expr.hpp  vec_vec_minus_asgn_expr.hpp  vec_vec_minus_expr.hpp  (+5 more)
lib/mtl4/tools/cmake/: C++11Features.cmake  MTLCommon.cmake
other/examples/: CMakeLists.txt  example.cc  initfile.dat.2d
(+1146 files in other folders)
